--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
         }
 
         body {
-            background-image: url("../img/me.jpg");
+            background-image: url("/img/me.jpg");
             background: rgba(0, 0, 0, 0.4);
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
+
+        div .center {
+            display: flex;
+            align-items: center;
+        }
     </style>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="center">
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </div>
 </body>
 
 </html>
