--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         div .center {
             display: flex;
             align-items: center;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
     <div class="center">
