--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             align-items: center;
             margin-left: auto;
             margin-right: auto;
+            text-align: center;
         }
     </style>
     <div class="center">
