--- a/index.html
+++ b/index.html
@@ -8,23 +8,32 @@
         }
 
         body {
-            background-image: url("/img/me.jpg");
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.9);
             background-repeat: no-repeat;
             background-attachment: fixed;
+            color: white;
         }
 
-        div .center {
+        .center {
             display: flex;
-            align-items: center;
+            justify-content: center;
+        }
+
+        .center div {
             margin-left: auto;
             margin-right: auto;
-            text-align: center;
+        }
+
+        .center div img {
+            background: rgba(0, 0, 0, 0.4);
         }
     </style>
     <div class="center">
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <div>
+            <img src="img/me.jpg" alt="Marcin" style="width:600px">
+            <h1>Hello World</h1>
+            <p>I'm hosted with GitHub Pages.</p>
+        </div>
     </div>
 </body>
 
