--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="center">
         <!-- HERO -->
         <div class="img">
-            <img src="img/me.jpg" alt="Marcin" style="width:600px">
+            <img src="img/marcin-mukosiej.jpg" alt="Marcin" style="width:600px">
         </div>
         <div class="about">
             <b>About Me</b>
